<resources>
    <string name="app_name">HelpCasaMobile</string>
    <string name="Bienvenue">Bienvenue</string>
    <string name="indentif">S\'identifier</string>
    <string name="createacc">Créer un compte</string>
    <string name="invité">Continuer en Tant qu\'invité</string>
    <string name="app"><u>A propos de nous</u></string>
    <string name="ravis">Ravis de vous revoir</string>
    <string name="mail">Entrer votre mail</string>
    <string name="password">Entrer votre mot de passe</string>
    <string name="connect">Connecter</string>
    <string name="mdps"><u>mot de passe oublié</u></string>
    <string name="noacc"><u>Vous n\'avez pas de compte?</u></string>
    <string name="message">Sélectionner votre\ntype d\'utilisateur\nparmis les options\nsuivantes</string>
    <string name="agimmob">Agent immobilier</string>
    <string name="prop">Client propriétaire</string>
    <string name="achet">Client acheteur</string>
    <string name="suiv">Suivant</string>
    <string name="coordonnes">Entrer vos coordonnées</string>
    <string name="nom">nom</string>
    <string name="prenom">prenom</string>
    <string name="option">option</string>
    <string name="adr">adresse</string>
    <string name="codepost">Code postal</string>
    <string name="Confirmpassword">Confirmer votre mot de passe</string>
    <string name="numMob">numerot mobile</string>
    <string name="numFix">numerot fixe</string>
    <string name="next">Suivant</string>
    <string name="age">Selectionner Votre age</string>
    <string name="date">donner la date de naissance</string>
    <string name="compte">Votre compte HelpCasaMobile a été créé avec succès ! Vous êtes maintenant prêt(e) à profiter de toutes les fonctionnalités pour vous aider  à acheter ou vendre un bien immobilier.\n</string>
    <string name="nomutlisateur">Votre nom d\'utilisateur est :</string>
    <string name="respconmm">responsable commercial</string>
    <string name="lastStep">juste ajouter une photo</string>
    <string name="Nvlannonce">Nouvelle annonce</string>
    <string name="supfi">Superficie</string>
    <string name="prx">Prix</string>
    <string name="nbChm">Nombre de chambre</string>
    <string name="descr">Descriptif du bien immobilier</string>
    <string name="ajtPh">Ajouter des photos</string>
    <string name="send">Envoyer</string>
    <string name="tblBor">Tableau de bord</string>
    <string name="pos">Poster une nouvelle annonce</string>
    <string name="cons">Consulter les annonces</string>
    <string name="his">Historique des annonces publiées</string>
    <string name="hist">Historique</string>
    <string name="hisVid">Votre historique est vide\n</string>
    <string name="hisviid">Votre historique est vide</string>
    <string name="che">Chercher ici</string>

    <string name="nav_open">Ouvrir</string>
    <string name="nav_close">Fremer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>