<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sidentifier"
    android:orientation="vertical"
    android:background="@drawable/gradientwelcome"

    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/logo"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/container"
        android:paddingBottom="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginVertical="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ravis"
            android:textColor="@color/welcomecolor"
            android:background="@color/transparent"
            android:layout_gravity="center"
            android:textSize="35dp"
            android:layout_marginTop="25dp"
            />
        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/mail"
            android:background="@drawable/edittxt"
            android:padding="10dp"
            android:textColorHint="@color/hintc"
            android:layout_marginTop="20sp"
            android:layout_gravity="center"
            android:id="@+id/mail"
            />
        <EditText
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:background="@drawable/edittxt"
            android:padding="10dp"
            android:textColorHint="@color/hintc"
            android:layout_marginTop="20sp"
            android:layout_gravity="center"
            android:id="@+id/pass"
            android:inputType="textPassword"
            />
        <TextView
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:text="@string/connect"
            android:background="@drawable/buttons1"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:id="@+id/connect"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_margin="20sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mdps"
            android:textColor="@color/gris"
            android:id="@+id/mdpsoublié"
            android:layout_marginLeft="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noacc"
            android:textColor="@color/gris"
            android:id="@+id/noacc"
            android:layout_marginLeft="10dp"

            />

    </LinearLayout>


</LinearLayout>