<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createacc"
    android:orientation="vertical"
    android:background="@drawable/gradientwelcome"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/logo"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/container"
        android:paddingBottom="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginVertical="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message"
            android:textColor="@color/welcomecolor"
            android:background="@color/transparent"
            android:layout_gravity="center"
            android:textSize="35dp"
            android:layout_marginTop="25dp"
            />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radg">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agimmob"
                android:textColor="@color/welcomecolor"
                android:textSize="20dp"
                android:layout_marginLeft="45dp"
                android:id="@+id/agentimmobilier"
                android:checked="true"

                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prop"
                android:textColor="@color/welcomecolor"
                android:textSize="20dp"
                android:layout_marginLeft="45dp"
                android:id="@+id/clienprop"

                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/achet"
                android:textColor="@color/welcomecolor"
                android:textSize="20dp"
                android:layout_marginLeft="45dp"
                android:id="@+id/clienachet"
                />

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suiv"
            android:background="@drawable/button2"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:id="@+id/suivant"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_marginLeft="100dp"
            android:padding="10dp"
            />

    </LinearLayout>
    

</LinearLayout>