<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/gradientwelcome"
    android:orientation="vertical"
    >
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:src="@drawable/logo"
        />
</RelativeLayout>
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/container"
    android:paddingBottom="25dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginVertical="20dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bienvenue"
        android:textColor="@color/welcomecolor"
        android:background="@color/transparent"
        android:layout_gravity="center"
        android:textSize="35dp"
        android:layout_marginTop="25dp"
        />
    <TextView
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/indentif"
        android:background="@drawable/buttons1"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:id="@+id/identif"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_margin="20sp"
        />
    <TextView
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/createacc"
        android:background="@drawable/buttons1"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:id="@+id/createacc"
        android:layout_margin="20sp"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app"
        android:textColor="@color/gris"
        android:layout_marginLeft="10dp"
        android:id="@+id/Aprop"
        />
</LinearLayout>
    


</LinearLayout>