<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nouvelleAnnonce"
    android:orientation="vertical"
    android:background="@drawable/nvl_annonce_client"
    >






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/new_ann_client_corr"
        android:paddingBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginVertical="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tblBor"
            android:text="@string/tblBor"
            android:padding="10dp"
            android:textColor="@color/black"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="125sp"
            android:textSize="20dp"
        />

        <TextView
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:id="@+id/poster"
            android:text="@string/pos"
            android:gravity="center"
            android:background="@drawable/btn_home_cli_prp"
            android:padding="16dp"
            android:textColor="@color/white"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:clickable="true" />

        <TextView
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:id="@+id/consulter"
            android:text="@string/cons"
            android:gravity="center"
            android:background="@drawable/btn_home_cli_prp"
            android:padding="16dp"
            android:textColor="@color/white"
            android:layout_marginTop="50dp"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:clickable="true" />

        <TextView
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:id="@+id/hist"
            android:text="@string/his"
            android:gravity="center"
            android:background="@drawable/btn_home_cli_prp"
            android:padding="16dp"
            android:textColor="@color/white"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="60dp"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:clickable="true" />





    </LinearLayout>


</LinearLayout>