<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcome"
    android:orientation="vertical"
    android:background="@drawable/gradientwelcome">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/container"
        android:paddingBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginVertical="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Bienvenue"
            android:textColor="@color/welcomecolor"
            android:background="@color/transparent"
            android:layout_gravity="center"
            android:textSize="35dp"
            android:layout_marginTop="55dp"
            />

        <TextView
            android:id="@+id/cptcrée"
            android:layout_width="wrap_content"
            android:layout_height="125dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="60dp"
            android:layout_marginRight="10dp"
            android:text="@string/compte"
            android:textColor="@color/welcomecolor"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/nomuti"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/nomutlisateur"
            android:textColor="@color/white"
            android:layout_marginTop="60dp"
            android:textSize="20dp"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>

</LinearLayout>