<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nouvelleAnnonce"
    android:orientation="vertical"
    android:background="@drawable/nvl_annonce_client"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Nvlannonce"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/new_ann_client_corr"
        android:paddingBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginVertical="20dp"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <Spinner
                    android:id="@+id/type_bien"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/editttcorr_annonce"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:textColorHint="@color/hintc"
                    android:layout_marginHorizontal="20sp"
                    android:padding="12dp"
                    />
                <Spinner
                    android:id="@+id/type_annonce"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/editttcorr_annonce"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:textColorHint="@color/hintc"
                    android:layout_marginHorizontal="20sp"
                    android:padding="12dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    >
                    <Spinner
                        android:id="@+id/gouver"
                        android:layout_width="165dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/editttcorr_annonce"
                        android:layout_gravity="center"
                        android:layout_marginTop="15dp"
                        android:textColorHint="@color/hintc"
                        android:layout_marginHorizontal="20sp"
                        android:padding="17dp"
                        />

                    <Spinner
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/editttcorr_annonce"
                        android:layout_gravity="center"
                        android:textSize="20dp"
                        android:layout_marginTop="15dp"
                        android:textColorHint="@color/hintc"
                        android:layout_marginHorizontal="20sp"
                        android:padding="17dp"
                        android:id="@+id/ville"
                        />
                </LinearLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/adr"
                    android:background="@drawable/editttcorr_annonce"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:layout_marginTop="15dp"
                    android:textColorHint="@color/hintc"
                    android:layout_marginHorizontal="20sp"
                    android:padding="10dp"
                    android:id="@+id/adresse"
                    android:inputType="text"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    >
                    <EditText
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/supfi"
                        android:background="@drawable/editttcorr_annonce"
                        android:layout_gravity="center"
                        android:textSize="20dp"
                        android:layout_marginTop="10dp"
                        android:textColorHint="@color/hintc"
                        android:layout_marginHorizontal="20sp"
                        android:padding="10dp"
                        android:id="@+id/Superficie"
                        android:inputType="numberDecimal"
                        />
                    <EditText
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/prx"
                        android:background="@drawable/editttcorr_annonce"
                        android:layout_gravity="center"
                        android:textSize="20dp"
                        android:layout_marginTop="10dp"
                        android:textColorHint="@color/hintc"
                        android:layout_marginHorizontal="20sp"
                        android:padding="10dp"
                        android:id="@+id/prix"
                        android:inputType="numberDecimal"
                        />
                </LinearLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nbChm"
                    android:background="@drawable/editttcorr_annonce"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:layout_marginTop="10dp"
                    android:textColorHint="@color/hintc"
                    android:layout_marginHorizontal="20sp"
                    android:padding="10dp"
                    android:id="@+id/nmbChamb"
                    android:inputType="numberDecimal"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:hint="@string/descr"
                    android:background="@drawable/editttcorr_annonce"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:layout_marginTop="25dp"
                    android:textColorHint="@color/hintc"
                    android:layout_marginHorizontal="20sp"
                    android:padding="10dp"
                    android:id="@+id/dscrip"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/photo"
                    android:text="@string/ajtPh"
                    android:background="@drawable/btn_ajt_photo"
                    android:padding="10dp"
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20sp"
                    android:clickable="true"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/envo"
                    android:text="@string/send"
                    android:background="@drawable/button3"
                    android:padding="10dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/black"
                    android:layout_marginRight="20sp"
                    android:layout_gravity="end"
                    android:clickable="true"
                    />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>


</LinearLayout>