<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".coordonne"
    android:orientation="vertical"
    android:background="@drawable/gradientwelcome"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:src="@drawable/logo"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/container"
        android:paddingBottom="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginVertical="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coordonnes"
            android:textColor="@color/welcomecolor"
            android:background="@color/transparent"
            android:layout_gravity="center"
            android:textSize="35dp"
            android:layout_marginTop="25dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nom"
            android:background="@drawable/edittxt"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:layout_marginTop="25dp"
            android:textColorHint="@color/hintc"
            android:layout_marginHorizontal="20sp"
            android:padding="10dp"
            android:id="@+id/nom"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prenom"
            android:background="@drawable/edittxt"
            android:layout_gravity="center"
            android:textSize="20dp"
            android:layout_marginTop="25dp"
            android:textColorHint="@color/hintc"
            android:layout_marginHorizontal="20sp"
            android:padding="10dp"
            android:id="@+id/prenom"
            />
        <Spinner
            android:id="@+id/civilité"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittxt"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:textColorHint="@color/hintc"
            android:layout_marginHorizontal="20sp"
            android:padding="12dp"
            />



    </LinearLayout>


</LinearLayout>